2023-10-21T08:10:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6596201666 # 1270
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
* notice: last 14d: unq all: 6 37
* notice: prev accum: outdated-unq outdated-all / unq all: 669 1054 / 693 1089
* notice: next accum: outdated-unq outdated-all / unq all: 669 1054 / 694 1091
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-21]

2023-10-20T08:11:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6585122293 # 1267
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
* notice: last 14d: unq all: 6 35
* notice: prev accum: outdated-unq outdated-all / unq all: 668 1053 / 690 1086
* notice: next accum: outdated-unq outdated-all / unq all: 669 1054 / 693 1089
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2023-10-06] / [2023-10-20]

2023-10-19T16:11:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6577335797 # 1265
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
* notice: last 14d: unq all: 5 33
* notice: prev accum: outdated-unq outdated-all / unq all: 668 1053 / 690 1085
* notice: next accum: outdated-unq outdated-all / unq all: 668 1053 / 690 1086
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-19]

2023-10-19T08:12:19Z: