@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-21T08:10:29Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "timestamp" : "2023-10-21T16:10:20Z",
+  "count" : 3,
+  "count_minmax" : [ 2, 3 ],
+  "count_decinc" : [ -0, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
