@@ -1,5 +1,5 @@
 {
-  "count": 37,
+  "count": 38,
   "uniques": 6,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2023-10-21T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
