@@ -1,3 +1,12 @@
+2023-10-21T16:10:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6598375141 # 1271
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
+* notice: last 14d: unq all: 6 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 669 1054 / 694 1091
+* notice: next accum: outdated-unq outdated-all / unq all: 669 1054 / 694 1092
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2023-10-21]
+
 2023-10-21T08:10:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6596201666 # 1270
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
